Added some cool new features
Including an archive tab where all my essays can be seen. Also added
jump links (i don’t know what the real name is for these) to each
essay, which makes them better indexed, and I updated my page layout.
Now, page 1 is oldest, 2 second oldest, and 3 is simply named
“exchange” and will be named exchange3 when I have enough entries
(!!two more) to have a fourth page. Also changed the information
entries so they use italic text, which looks a bit more sleek than the
dashes which I had earlier. Some things have fucked up formatting now,
but I’ll fix that later. For now, I’ll leave the site looking pretty
and the code not.

--- a/exchange.html
+++ b/exchange.html
@@ -119,6 +119,7 @@
                          <a class="item" href="code.html">Code Essays</a>
                      </div>
                   </div>
+                  <a class="item" href="exchange_archive.html">Archive</a>
                </div>
             </div>
          </div>
@@ -140,11 +141,12 @@
 
 
          <div class="ui raised very padded text container segment">
-            <h2 class="ui header">----Personal Essays----</h2>
-            <p>This page contains a series of personal essays, with the newest being first and the oldest being last. It would be best to read these in chronological order. These personal essays are similar to some sort of blog post, and I will continue to update them as time permits. Also, note that I am aware my writing isn't great and constructive criticism is welcome. Tell me what you think in the <a href="#comments">comments below</a>!</p>
+            <h2 class="ui header"><i>Personal Essays</i></h2>
+            <p>This page contains a series of personal essays, with the newest being first and the oldest being last. It would be best to read these in chronological order (check the <a href="exchange_archive.html">archive</a> to get to older ones easily). These personal essays are similar to some sort of blog post, and I will continue to update them as time permits. Also, note that I am aware my writing isn't great and constructive criticism is welcome. Tell me what you think in the <a href="#comments">comments below</a>!</p>
 
          </div>
 
+         <A NAME="essay27"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Notes on some Site Changes</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 18, 2015</p>
@@ -153,8 +155,10 @@
                  <img src="images/comments.png" class="ui large bordered rounded image">
                  <p>Being as vacation is over, I'll be headed back to school tomorrow. I'll spend four hours in the school, and then go by train to Dusseldorf where I will spend another four hours in the Language school. It will most likley be exhausting, but I'll learn a lot and improve my German so I think it's worth it.</p>
                  <p>Lastly, I may have broke a few things when tweaking the site. If something doesn't work for you, once again please contact me so I can fix it. Thanks for reading!</p>
+                 <p><b>Update: October 19, 2015</b> - I didn't figure this merit's a new entry, but I also added a essay archive so you can easily get to older essays or ones from a specific day. You can find this by clicking the "Archive" button on the meun bar.</p>
          </div>
 
+         <A NAME="essay26"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Deutschland Tour: Day Fourteen</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 16, 2015</p>
@@ -175,6 +179,7 @@
              <img src="images/organizers.jpg" class="ui large bordered rounded image">
          </div>
 
+         <A NAME="essay25"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Deutschland Tour: Day Thirteen</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 15, 2015</p>
@@ -215,6 +220,7 @@
              <!---I might have mentioned this before, but Rotex (our tour organizers) made a rule that for each minute we were late, we would be required to pay one euro. They also made us pay 15 euros any time we were caught in groups of less than three. They pooled this money (of which I made a three euro contribution for my accidentally slightly longer stay at the East Side Gallery) and saved it for our last night of the tour. That night happened to be on this day. Rotex took us with our bus to a small bar in Hamburg, where they bought us drinks with the money we paid them for our lateness. We enjoyed our time at the bar, and reflected on our experiences over the course of the tour. We didn't go back with the bus, and instead walked to the train station and took two trains to get back to our hostel. This made for quite a long walk, but it seemed that this was a logical decision for Rotex and our bus driver because they weren't keen to have anyone vomiting on the bus. Fortunatley, we didn't run into this problem and all got back to the hostel just fine.</p>--->
          </div>
 
+         <A NAME="essay24"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Deutschland Tour: Day Twelve</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 14, 2015</p>
@@ -231,6 +237,7 @@
              <p>After this, we went to our Hostel, had dinner, and settled into our rooms. We then were given some free time to walk around outside of our hostel, and I sat with a group of other exchange students in a nearby park, talking and enjoying the evening. We went back to the hostel at around 11 and went to bed.</p>
          </div>
 
+         <A NAME="essay23"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Deutschland Tour: Day Eleven</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 13, 2015</p>
@@ -266,6 +273,7 @@
 
          </div>
 
+         <A NAME="essay22"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Deutschland Tour: Day Ten</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 12, 2015</p>
@@ -291,6 +299,7 @@
              <p>This light show was really incredible. I had never seen anything like it. What a creative idea to light up buildings with massive projectors and turn them into beautiful, dynamic art. After we were done watching this light show, we went back to our hostel and went to bed.</p>
          </div>
 
+         <A NAME="essay21"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Deutschland Tour: Day Nine</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 11, 2015</p>
@@ -309,92 +318,6 @@
              <p></p>
              <p>After the talent show, which proved to be equal parts hastily prepared and hilarious, we all went to sleep.</p>
          </div>
-
-         <div class="ui raised very padded text container segment">
-             <h2 class="ui header">Deutschland Tour: Day Eight</h2>
-             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 10, 2015</p>
-             <p>Today we woke up to a pleasantly cool morning in Rothenberg. We toured the city again for a few hours in the morning, and walked around the outside wall. There was a light fog and a lot of moisture in the air, which made for a nice morning walk.</p>
-             <img src="images/rothenberg2-1.jpg" class="ui large bordered rounded image">
-             <img src="images/rothenberg2-2.jpg" class="ui large bordered rounded image">
-             <img src="images/rothenberg2-3.jpg" class="ui large bordered rounded image">
-             <img src="images/rothenberg2-4.jpg" class="ui large bordered rounded image">
-             <img src="images/rothenberg2-5.jpg" class="ui large bordered rounded image">
-             <img src="images/rothenberg2-6.jpg" class="ui large bordered rounded image">
-             <p>We began a lengthy drive to Dresden, and stopped a few times along the way. When we got to Dresden, we first went to our hostel and had dinner. We left our hostel after dinner and took a tour around the city, and we were then given some free time to explore ourselves.</p>
-             <img src="images/dresden1-1.jpg" class="ui large bordered rounded image">
-             <img src="images/dresden1-2.jpg" class="ui large bordered rounded image">
-             <img src="images/dresden1-3.jpg" class="ui large bordered rounded image">
-             <img src="images/dresden1-4.jpg" class="ui large bordered rounded image">
-             <img src="images/dresden1-5.jpg" class="ui large bordered rounded image">
-             <img src="images/dresden1-6.jpg" class="ui large bordered rounded image">
-             <img src="images/dresden1-7.jpg" class="ui large bordered rounded image">
-             <p>After our free time was up, we all met up and walked back to the hostel. As usual, we went to bed late.</p>
-         </div>
-
-         <div class="ui raised very padded text container segment">
-             <h2 class="ui header">Deutschland Tour: Day Seven</h2>
-             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 9, 2015</p>
-             <p>Our main attraction of this morning was a bit more depressing than the others. We visited the concentration camp of Dachau, where over 200,000 people were imprisoned and 42,000 died. This was the first concentration camp that was set up, and was originally for political prisoners. It served as a model to the many other concentration camps that were erected all over Germany and the surrounding countries. As we solemnly walked to the enterance gate, we were greeted by the words:</p>
-             <h2>"ARBEIT MACHT FREI"</h2>
-             <p>This translates to, "Work brings Freedom". This is a tragically ironic notion, because many of the prisoners in this camp were forced to work until their death. It wasn't until April 29, 1945 that American troops liberated the surviving prisoners. The camp was in use for twelve years.</p>
-             <img src="images/dachau1.jpg" class="ui large bordered rounded image">
-             <img src="images/dachau13.jpg" class="ui large bordered rounded image">
-             <img src="images/dachau12.jpg" class="ui large bordered rounded image">
-             <p>The electric fence surrounding the camp has a high enough voltage to kill anyone who touches it on contact. For some, this fate was better than enduring the tortures of life inside.</p>
-             <img src="images/dachau7.jpg" class="ui large bordered rounded image">
-             <img src="images/dachau6.jpg" class="ui large bordered rounded image">
-             <img src="images/dachau5.jpg" class="ui large bordered rounded image">
-             <p>The barracks were tiny, and were always packed over capacity.</p>
-             <img src="images/dachau2.jpg" class="ui large bordered rounded image">
-             <p>Perhaps the most chilling part of the camp was the crematorium.</p>
-             <img src="images/dachau16.jpg" class="ui large bordered rounded image">
-             <p>Nazi propoganda was displayed throought the museum. The Nazis built up hate against Jewish people, and made out Hitler to be some sort of solution to all of Germany's problems.</p>
-
-             <img src="images/dachau11.jpg" class="ui large bordered rounded image">
-             <img src="images/dachau9.jpg" class="ui large bordered rounded image">
-             <img src="images/dachau10.jpg" class="ui large bordered rounded image">
-             <img src="images/dachau8.jpg" class="ui large bordered rounded image">
-             <img src="images/dachau3.jpg" class="ui large bordered rounded image">
-             <p>The words mean: "For the dead to honor, for the living to remember." Memorials like these could be found scattered all over the area. The dead in this camp are especially honored because many of them were those who spoke out against the Nazis and tried to stop what was happening.</p>
-
-             <p>Inside the camp was a large museum describing the eintire Nazi regime and the part Dachau played in it. This museum was interesting, but also very depressing. We also visited the living quarters, which were cramped and clearly uncomfortable. We visited the crematorium too. It was eerie being in a place where thousands of people were tortured and died. But the camp and the memorial site Send a powerful message:</p>
-             <h3>"MAY THE EXAMPLE OF THOSE WHO WERE EXTERMINATED HERE BETWEEN 1933-1945 BECAUSE THEY RESISTED NAZISM UNITE THE LIVING FOR THE DEFENCE OF PEACE AND FREEDOM AND IN RESPECT FOR THEIR FELLOW MEN"</h3>
-             <img src="images/dachau17.jpg" class="ui large bordered rounded image">
-             <p>We left the camp around midday and went to get some food. Then, we began our drive to Rothenberg. We drove in the bus for about five hours, but the drive was certainly worth it to see this town. Despite being very small, Rothenberg is a ity that is famous worldwide. It is over 900 years old, and was a strong medival city. However, due to an invasion, it was partially destroyed and many residents were killed. Thus, the once powerful city lived in poverty and could not build new buildings. As such, all buildings remained in the medival style to this day. The city is perfectly preserved in the medival style. Here are some pictures I took of the city.</p>
-             <img src="images/rothenberg1-1.jpg" class="ui large bordered rounded image">
-             <img src="images/rothenberg1-2.jpg" class="ui large bordered rounded image">
-             <img src="images/rothenberg1-3.jpg" class="ui large bordered rounded image">
-             <img src="images/rothenberg1-4.jpg" class="ui large bordered rounded image">
-             <img src="images/rothenberg1-5.jpg" class="ui large bordered rounded image">
-             <p>After touring the city, we were given free time to take some pictures. After, we went to our hostel and went to sleep.</p>
-         </div>
-
-         <div class="ui raised very padded text container segment">
-             <h2 class="ui header">Deutschland Tour: Day Six</h2>
-             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | October 8, 2015</p>
-             <p>Fortunatley we woke up to some nicer weather today. We left the hostel early to go and see some of the various attractions that can be found in München, and we learned about it's historical significance. After that we were given some time to explore ourselves and have lunch, and I naturally had the German classic known as "Currywurst". This dish consists of a delicious sausage covered in curry sauce and served with Pommes (French Fries, Chips). I took some nice pictures of the city too, but it was still a bit cloudy.</p>
-             <img src="images/munich1.jpg" class="ui large bordered rounded image">
-             <img src="images/munich2.jpg" class="ui large bordered rounded image">
-             <img src="images/munich3.jpg" class="ui large bordered rounded image">
-
-             <p>Today we also visited the BMW museum. This museum was very well done. It was modern, elegant, and very informative. I especially enjoyed the "Mini Story" exhibit, which explains the evolution of BMW's popular car brand, the Mini.</p>
-
-             <img src="images/bmw3.jpg" class="ui large bordered rounded image">
-             <img src="images/bmw6.jpg" class="ui large bordered rounded image">
-             <img src="images/bmw1.jpg" class="ui large bordered rounded image">
-             <img src="images/bmw4.jpg" class="ui large bordered rounded image">
-             <img src="images/bmw5.jpg" class="ui large bordered rounded image">
-             <img src="images/bmw2.jpg" class="ui large bordered rounded image">
-             <img src="images/bmw7.jpg" class="ui large bordered rounded image">
-             <img src="images/bmw8.jpg" class="ui large bordered rounded image">
-             <img src="images/bmw9.jpg" class="ui large bordered rounded image">
-             <img src="images/bmw10.jpg" class="ui large bordered rounded image">
-
-             <p>We went back to the same hostel today, and relaxed for a bit. Then we all went together to a bar, where we once again had a few drinks and danced. After a few hours of enjoying the bar and plenty of loud latin music, we walked back to the Hostel and went to sleep.</p>
-         </div>
-
-
-
 
 
 
