--- a/exchange.html
+++ b/exchange.html
@@ -155,7 +155,7 @@
                  <img src="images/comments.png" class="ui large bordered rounded image">
                  <p>Being as vacation is over, I'll be headed back to school tomorrow. I'll spend four hours in the school, and then go by train to Dusseldorf where I will spend another four hours in the Language school. It will most likley be exhausting, but I'll learn a lot and improve my German so I think it's worth it.</p>
                  <p>Lastly, I may have broke a few things when tweaking the site. If something doesn't work for you, once again please contact me so I can fix it. Thanks for reading!</p>
-                 <p><b>Update: October 19, 2015</b> - I didn't figure this merit's a new entry, but I also added a essay archive so you can easily get to older essays or ones from a specific day. You can find this by clicking the "Archive" button on the meun bar.</p>
+                 <p><b>Update: October 19, 2015</b> - I didn't figure this merits a new entry, but I also added a essay archive so you can easily get to older essays or ones from a specific day. You can find this by clicking the "Archive" button on the meun bar.</p>
          </div>
 
          <A NAME="essay26"></a>
