Added (cheesy) german flag background, maybe I'll change it later.

--- a/exchange.html
+++ b/exchange.html
@@ -88,6 +88,9 @@
          border: none !important;
          box-shadow: none !important;
          }
+         .pusher {
+           background-image: url("images/german-flag-hd.png") !important;
+         }
       </style>
       <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
       <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -102,7 +105,7 @@
    </head>
    <body>
       <!-- Page Contents -->
-      <div class="pusher">
+      <div class="pusher" id="pusher">
          <div class="ui inverted vertical masthead center aligned segment">
             <!-- Main Menu-->
             <div class="ui container">
