Made the cheesey background go for all pages

--- a/exchange1.html
+++ b/exchange1.html
@@ -88,6 +88,9 @@
          border: none !important;
          box-shadow: none !important;
          }
+         .pusher {
+           background-image: url("images/german-flag-hd.png") !important;
+         }
       </style>
       <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
       <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -173,7 +176,7 @@
                  <img src="images/dusseldorfstation.jpg" class="ui large bordered rounded image">
                  <p>(Above) The crowded centeral railway station in Dusseldorf.</p>
          </div>
-         
+
          <A NAME="essay8"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Airshow in Wesel</h2>
