--- a/exchange2.html
+++ b/exchange2.html
@@ -88,6 +88,9 @@
          border: none !important;
          box-shadow: none !important;
          }
+         .pusher {
+           background-image: url("images/german-flag-hd.png") !important;
+         }
       </style>
       <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
       <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
