New entry (finally)

--- a/exchange.html
+++ b/exchange.html
@@ -149,6 +149,52 @@
 
          </div>
 
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Fall Into Winter</h2>
+             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | November 25, 2015</p>
+                 <p>I figured I really should give you guys an update, being as it has been a while since I have written anything here. I've now been here 106 days if my math is right, which seems pretty crazy being as it doesn't feel like that long. It just feels like a few weeks, but those weeks quickly slip into months and now I'm almost a quarter of the way through my exchange. It may seem simple but it's just weird to think about.</p>
+                 <img src="images/fall-me.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Me on a walk just outside of Wesel.</p>
+                 <img src="images/rheinewesel.jpg" class="ui large bordered rounded image">
+                 <p>(Above) A picture of the Rhein from Wesel</p>
+                 <p>So, what has happened in the last month or so? I'll try to summarize. A large portion of my time has been spent in school and language school, being as I have school from 8-11:20 and then language school from 2-8. This made for some quite stressful days, and with the burden of learning a new language also I found myself to be tired pretty constantly. Overall it was for sure worth it though. My German has improved so much, a lot more than I had expected it to. And it gets better every day. It's really exciting to be learning a new language.</p>
+                 <img src="images/school1.jpg" class="ui large bordered rounded image">
+                 <img src="images/school2.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Some pictures from my school</p>
+                 <p>I also got the chance to visit a cool exhibition in Oberhausen, called "Die Schone Schönheit". This exhibition was in a gigantic gas storage tank that had been converted to a museum for temporary exhibitons. The idea of the collection was to bring together beautiful art from all over the world and organize it. None of the pieces were origionals, but it was still really nice to look at them and read a bit about them.</p>
+                 <img src="images/schone1.jpg" class="ui large bordered rounded image">
+                 <p>(Above) A picture from the exhibiton</p>
+                 <p>(Above) These pictures were taken from the top of the museum. The view is pretty nice up there</p>
+                 <img src="images/oberhausen2.jpg" class="ui large bordered rounded image">
+                 <img src="images/oberhausen1.jpg" class="ui large bordered rounded image">
+                 <p>I skipped out on language school one thursday to participate in a "Hochschuletag", which was a day where everyone from my class (11) went in several busses to Münster in order to see the university. I attended a few lectures about Computer Science, which I found to be interesting even though this university isn't exactly known for it's exceptionalism in this area. Still though, it was nice to see the lectures and spend some time in Münster.</p>
+                 <img src="images/hochschule1.jpg" class="ui large bordered rounded image">
+                 <img src="images/hochschule2.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Some pictures from my day in Münster.</p>
+                 <p>My house here in Wesel is a few houses away from a small Kindergarten. Every year, kindergartens in Germany celebrate St. Martin's day. This holiday is in rememberance of St. Martin of Tours, a roman soldier who gave half of his cloak to a beggar who was cold. For this kind act, he was made a saint. Anyway, to remember this man the childeren walk through the streets while a band plays and carry lanterns. It's kind of a sweet holiday, and it was really pretty will all the lantern light.</p>
+                 <img src="images/martins1.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Kindergarteners with their parents celebrating St. Martins day</p>
+                 <img src="images/martins2.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Some candles out on our patio</p>
+                 <p>Last weekend I went to Frankfurt (or to be more specific, Heusenstamm) for my host mothers sisters birthday. I guess she would be my host aunt? Anyway, this was quite a nice experience and I got the chance to spend some time with my extended host family, who are all wonderful people. It was however a bit of a stress on my language skills, which was both good and bad. It's easy to get a bit mixed up when learning a new language, as I was reminded when I used the phrase 'ganz gut' instead of 'sehr gut' to describe the food. I had thought that they were the same, both meaning 'very good', but alas, I was mistaken and realized I had told them that the excellent meal was just 'all right'.</p>
+                 <p></p>
+                 <img src="images/frankfurt.jpg" class="ui large bordered rounded image">
+                 <p>(Above) The drive to Franfurt</p>
+                 <img src="images/castlefamily.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Me with my host mother, her sister, and my host brother at a castle in Heusenstamm</p>
+                 <img src="images/castlething.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Another picture of this castle</p>
+                 <p>In past few days fall has really started to turn to winter. It has gotten colder for sure, though still not anywhere near as cold as I am used to. The trees are barren having lost their leaves, and frequent rain leads to a constant dampness outside. But yesterday I got to see some snow, which I found really wonderful. Snow is one of the main things I miss about Alaska. It's the kind of thing you kind of take for granted until it's gone. The snow didn't stick though sadly, but maybe we will get some that does this December? I hope so. I've been working on putting together a package with some nice typical german things for my family to enjoy around Christmas. Turns out that sending a package to the USA is somewhat difficult, but I can make it happen. I managed to get some postcards through already.</p>
+                 <img src="images/snowwesel.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Snow in Wesel!</p>
+                 <p>All in all things have been great here. I am enjoying myself, school is going well, and my language skills are coming along faster than I expected. I haven't found myself getting homesick yet, which I am glad of, though the snow yesterday did bring on a pang of nostalgia for my icy home. And I can't say I'm not sad to be missing out on Heimer's classes, especially after hearing my friends back home talk about them. It's okay though, I have enjoyed my time so far in Germany and I know I will enjoy the rest of it. Meanwhile, I'll try to update this a bit more often so it's not always long entries like this one. I'll have an entry before Christmas at the very least. Thanks for reading guys, and stay warm!</p>
+                 <img src="images/paperstar.jpg" class="ui large bordered rounded image">
+                 <p></p>
+                 <p>(Above) Keeping myself busy with some paper star folding, why not?</p>
+
+
+         </div>
+
          <A NAME="essay27"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Notes on some Site Changes</h2>
