Added placement in archive (oops, should have done this before

--- a/exchange.html
+++ b/exchange.html
@@ -133,6 +133,7 @@
 
          <!-- Essay template:
 
+         <A NAME="essayXX"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Essay Title</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | Day Month, Year</p>
@@ -149,6 +150,7 @@
 
          </div>
 
+         <A NAME="essay28"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Fall Into Winter</h2>
              <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | November 25, 2015</p>
