--- a/exchange_archive.html
+++ b/exchange_archive.html
@@ -147,7 +147,7 @@
             <h2 class="ui header"><i>Personal Essays Archive</i></h2>
             <p>Here you will find an index of my personal essays. You can click on the links to open an individual essay</p>
             <ul>
-
+                <li>November 25, 2015 - <a href="exchange.html#essay28">Fall Into Winter</a></li>
                 <li>October 18, 2015 - <a href="exchange.html#essay27">Notes on some Site Changes</a></li>
                 <li>October 16, 2015 - <a href="exchange.html#essay26">Deutschland Tour: Day Fourteen</a></li>
                 <li>October 15, 2015 - <a href="exchange.html#essay25">Deutschland Tour: Day Thirteen</a></li>
