New blog entry! Four months in Germany

--- a/exchange.html
+++ b/exchange.html
@@ -150,6 +150,39 @@
 
          </div>
 
+         <A NAME="essay29"></a>
+         <div class="ui raised very padded text container segment">
+             <h2 class="ui header">Four Months</h2>
+             <p><img src="images/me.jpg" class="ui avatar image"> <b>Jasper Holton</b> | December 11, 2015</p>
+                 <p>Today is the eleventh of December. I arrived here the 11th of August. That means I have now been here for four months. I know I have mentioned this before, but it still seems strange to me. It doesn't feel like four months at all. I'm already a third of the way through my exchange. Or at least, thats what I am planning. I don't have a set return date yet. I can stay here up to an entire year, as in, until next August, but I am not sure that I will be able to due to school next year. Anyway, I have until February to decide when my return flight will be.</p>
+                 <p>Meanwhile, it's getting closer and closer to Christmas, which is quite a big deal here in Germany. There are already quite a few decorations up, and we have picked out a tree which we will have cut and delivered to us when the time comes. I'm a bit excited for it actually, being as any foreign holiday is a really fun experience. There is always something new to see and learn.</p>
+                 <p>Now, one might wonder, what have I been up to the past few weeks? Well, quite a bit. I spent some time putting together some Christmas mail for various relatives and friends back home, and I also put together a package for my family to receive in Hawaii. I collected some things that I thought they might enjoy, like sweets, some christmas related items, and some other typical german things. I found most of what I included at Weinachtsmärkte, or Christmas Markets, which are pretty common here in Germany around this time of year. They pretty much consist of various stands selling many sorts of goods, most of them christmas related. There is also a lot of what is called Glühwein, what is essentially a hot drink consisting of wine and various spices. You can buy it almost everywhere you turn at christmas markets, and many people seem to really enjoy it. Personally it's not to my taste, I find it a bit too sweet. But I had a cup anyway, just to try.</p>
+                 <img src="images/wesel-weinachtsmarkt.jpg" class="ui large bordered rounded image">
+                 <p>(Above) The christmas market in Wesel</p>
+                 <img src="images/munsterrotary13.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Me with a cup of Glühwein in Münster</p>
+                 <p>I was in Münster for a weekend with the rest of the Rotary exchange students in the district. It was really nice to see everyone, and I had a good time visiting the zoo and going to some christmas markets. I particularly enjoy connecting with other exchange students and hearing about their experiences. Being in this together really connects us as a community. We all have similar experiences, can relate to eachother, and we are all going through the same sort of thing. I also heard that we are getting some new exchange students in this district, from Brazil, Australia, and somewhere else. I should mention that this district receives exchange students on a half year basis, not yearly. That means that we get new exchange students in February and August. This divides the exchange students in our district into what we call "newbies" and "oldies". The oldies are the ones who have been there six months before the newbies (me being one of the newbies). The newbies become oldies after 6 months of being on exchange, at which point their oldies leave, and newbies come to fill their place. </p>
+                 <img src="images/munsterrotary3.jpg" class="ui large bordered rounded image">
+                 <img src="images/munsterrotary4.jpg" class="ui large bordered rounded image">
+                 <img src="images/munsterrotary6.jpg" class="ui large bordered rounded image">
+                 <img src="images/munsterrotary8.jpg" class="ui large bordered rounded image">
+                 <img src="images/munsterrotary9.jpg" class="ui large bordered rounded image">
+                 <img src="images/munsterrotary10.jpg" class="ui large bordered rounded image">
+                 <img src="images/munsterrotary11.jpg" class="ui large bordered rounded image">
+                 <img src="images/munsterrotary12.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Some pictures from the Münster Zoo.</p>
+
+                 <p>I also spent last weekend in Warendorf, where my host mothers sister lives. There we celebrated the German holiday Nikolaus, where families childeren are given small gifts (traditionally left in their shoes). This was quite entertaining for me, as the family actually hired someone to dress as Nikolaus (the costume is somewhat similar to Santa Claus). I'll definatley get some pictures up here later, but I currently have none, being as I didn't take any myself. However, I did get a few nice shots of Warendorf. It's a really nice little town, not far from Münster.</p>
+                 <img src="images/warendorf1.jpg" class="ui large bordered rounded image">
+                 <img src="images/warendorf2.jpg" class="ui large bordered rounded image">
+                 <img src="images/warendorf3.jpg" class="ui large bordered rounded image">
+                 <img src="images/warendorf4.jpg" class="ui large bordered rounded image">
+                 <p>(Above) Some pictures from our walk around Warendorf</p>
+                 <p>Meanwhile I have been in the school where most students are finishing up their exams. This makes school a bit strange for me, as I can spontaneously have my classes cancelled and end up with days where I only have a few hours of school. Otherwise it's been really nice, and my German is continuing to improve at a fast rate. After I have a conversation with someone in German, I stop and think to myself, "Wow, how did I do that?" It's just becoming natural for me at this point. And I am really glad for that, because it was a bit frustrating at first learning the language. I've also been doing some more origami art for christmas. Here are a few intersecting tetrahedral stars that I made. Not bad I think.</p>
+                 <img src="images/origami1.jpg" class="ui large bordered rounded image">
+                 <p>Four months in Germany has been an amazing experience. All new people, all new language, all new school, all new life almost. I miss my family back home a bit more, but I am still really excited for the rest of what this experience has in store for me. Every day is an adventure, and every day is a treasure. I hope that with my blog you will get a glimpse of what this is like. Until next time!</p>
+         </div>
+
          <A NAME="essay28"></a>
          <div class="ui raised very padded text container segment">
              <h2 class="ui header">Fall Into Winter</h2>
