Yay! Two more entries!
And i remembered to update the archive!

--- a/exchange_archive.html
+++ b/exchange_archive.html
@@ -147,6 +147,9 @@
             <h2 class="ui header"><i>Personal Essays Archive</i></h2>
             <p>Here you will find an index of my personal essays. You can click on the links to open an individual essay</p>
             <ul>
+                <li>December 30, 2015 - <a href="exchange.html#essay31">A Day in Dusseldorf and Oberhausen</a></li>
+                <li>December 28, 2015 - <a href="exchange.html#essay30">Christmas in Germany</a></li>
+                <li>December 11, 2015 - <a href="exchange.html#essay29">Four Months</a></li>
                 <li>November 25, 2015 - <a href="exchange.html#essay28">Fall Into Winter</a></li>
                 <li>October 18, 2015 - <a href="exchange.html#essay27">Notes on some Site Changes</a></li>
                 <li>October 16, 2015 - <a href="exchange.html#essay26">Deutschland Tour: Day Fourteen</a></li>
